--- a/assets/style.css
+++ b/assets/style.css
@@ -5,9 +5,10 @@
     --accessory-color-1: #e0edc5;
     --accessory-color-2: #e7f59e;
 }
+
+/* header section */
 header {
-    align-content: flex-start;
-    padding: 30px 50px;
+    padding: 15px 10px;
     background-color: #b0bea9;
     justify-content: center;
 }
@@ -17,7 +18,7 @@ header h1 {
     color: #f1f7ee;
 }
 header nav  {
-   margin: 10px;
+   margin: 1px;
 }
 header nav ul {
     display: flex;
@@ -34,11 +35,14 @@ header nav ul li a {
     font-weight: lighter;
     color: #f1f7ee;
 }
-
-.about-me {
- display: flex;
- flex-wrap: wrap;
-}
+/* .hero {
+    background-image: url("./images/FullSizeRender.jpg");
+    background-size: contain;
+    background-position: center;
+    height: 146px;
+    width: 1128px;
+    opacity: .5;
+} */
 
 .section-title h2 {
     font-family: 'Times New Roman', Times, serif;
@@ -50,6 +54,23 @@ header nav ul li a {
     font-size: 36px;
 }
 
+/* start about me section */
+.about-me {
+ display: flex;
+ flex-wrap: wrap;
+ box-sizing: border-box;
+ border: 1px solid blue;
+ height: 300px;
+ width: 100px;
+}
+
+.about-me img {
+    object-fit: contain;
+
+    height: 25px;
+    height: 25px;
+
+}
 
 .about-me-bio {
     text-align: right;
@@ -59,6 +80,7 @@ header nav ul li a {
     font-size: 18px;
 }
 
+/* start The Work section */
 .projects {
     width: 100%;
     margin: 0 auto;
@@ -72,13 +94,22 @@ header nav ul li a {
     flex: 1;
     background: #92aa83;
     border: 2px solid;
+    border-radius: 50px;
+    color: #f1f7ee;
+}
+.project {
+    margin: 10px;
+    flex: 1;
+    background: #92aa83;
+    border: 2px solid;
+    border-radius: 50px;
     color: #f1f7ee;
 }
 
 .project h3 {
     font-style: var(--secondary-color);
     font-weight: bold;
-    font-size: 2vw;
+    font-size: 24px;
     margin-left: 25px;
 }
 
@@ -86,9 +117,21 @@ header nav ul li a {
     color: #e7f59e;
     margin-left: 25px;
     font-size: 1.33vw;
+    font-style: italic;
 }
 
 .project p {
     text-align: center;
     margin: 25px;
+}
+
+/* start contact section */
+.contact-info {
+    text-align: center;
+
+}
+
+.contact-info ul li {
+    list-style: none;
+    justify-content: baseline;
 }
