--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,14 @@
     display: flex ;
 }
 
+.float-right {
+    float: right;
+}
+
+.float-left {
+    float: left;
+}
+
 /* body */
 body {
     color: var(--tertiary-color);
@@ -44,7 +52,7 @@ header a {
 }
 
 header nav {
-    margin: 10px 0;
+    margin: 16px;
 }
 header nav ul {
     list-style: none;
@@ -55,28 +63,96 @@ header nav ul {
 header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
-    font-size: 2.5vw;
+    font-size: 2vw;
 }
 header nav ul li a:hover {
     background-color: var(--tertiary-color);
     color: var(--secondary-color);
+    border-radius: 15px;
 }
 /* section titles */
 .section-title {
     font-size: 40px;
     color: var(--accessory-color-1);
     text-align: center;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
     margin: 0 auto 35px auto;
     border-bottom: 3px solid var(--accessory-color-2);
     width: 35%;
 }
 
 /* About-Me */
+.bio {
+    text-align: center;
+    margin: 5px;
+    width: 50%;
+}
 
+.bio h3 {
+    font-size: 32px;
+    font-weight: bold;
+}
 
 /* Projects */
+.container {
+    display: flex;
 
+}
+.p-card {
+    background-color: var(--primary-color);
+    border: 4px solid var(--accessory-color-2);
+    color: var(--tertiary-color);
+    margin: 30px;
+    padding: 8px;
+    
+}
 /* Contact */
+.contact-info {
+    border: 4px solid var(--accessory-color-2);
+    margin: 30px;
+    width: 30%;
+    font-size: 18px;
+    flex-wrap: wrap;
+}
+.contact-info address {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px 10px;
+}
 
+
+.social-media {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 10px 50px;
+    padding: 50px;
+    color: var(--tertiary-color);
+    font-size: 18px;
+}
+.social-media-btn {
+    justify-content: center;
+}
+.social-media-btn h3 {
+    text-align: center;
+    padding: 25px;
+}
+.social-media-logo img {
+    width: 250px;
+    height: auto;
+    justify-content: center;
+}
+.music h3 {
+    text-align: center;
+    font-size: 35px;
+    color: #0c7c59;
+    padding: 20px;
+    width: 50%;
+}
+.music iframe{
+    width: 50%;
+    height: 337px;
+    border: 10px solid var(--primary-color);
+    margin-left: 15px;
+}
 /* Footer */
