--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,36 +4,42 @@
     padding: 0;
 }
 :root {
-    --primary-color: #b5d6b2;
-    --secondary-color:#fffacc;
-    --tertiary-color: #573d1c;
-    --accessory-color-1: #0c7c59;
-    --accessory-color-2: #d64933;
+    --primary-color: #0c7c59;
+    --secondary-color:#573d1c;
+    --tertiary-color: #C589E8;
+    --accessory-color-1: #fcfcfc;
 }
 
 /* Utilities */
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 .flex-row {
     display: flex ;
 }
+section {
+    padding: 60px;
+}
 
-.float-right {
+/* .float-right {
     float: right;
 }
 
 .float-left {
     float: left;
-}
+} */
 
 /* body */
 body {
-    color: var(--tertiary-color);
+    color: var(--secondary-color);
     font-family: 'Times New Roman', Times, serif
 }
 
 /* header */
 header {
     padding: 15px 40px;
-    background-color: var(--accessory-color-1);
+    background-color: var(--primary-color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -48,7 +54,7 @@ header #name {
 
 header a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--secondary-color);
 }
 
 header nav {
@@ -67,30 +73,39 @@ header nav ul li a {
 }
 header nav ul li a:hover {
     background-color: var(--tertiary-color);
-    color: var(--secondary-color);
+    color: var(--accessory-color-1);
     border-radius: 15px;
 }
 /* section titles */
 .section-title {
     font-size: 40px;
-    color: var(--accessory-color-1);
+    color: var(--primary-color);
     text-align: center;
     padding-bottom: 15px;
     margin: 0 auto 35px auto;
-    border-bottom: 3px solid var(--accessory-color-2);
+    border-bottom: 3px solid var(--tertiary-color);
     width: 35%;
 }
 
 /* About-Me */
 .bio {
-    text-align: center;
-    margin: 5px;
-    width: 50%;
+    margin: 10px 25px;
+    padding: 10px 5px;
+    width: fit-content;
+    background-color: var(--accessory-color-1);
+    border: 4px solid var(--tertiary-color);
+    color: var(--secondary-color);
+    border-radius: 8px;
 }
 
 .bio h3 {
     font-size: 32px;
     font-weight: bold;
+    text-align: center;
+}
+.bio p {
+    padding: 5px;
+    text-align: center;
 }
 
 /* Projects */
@@ -99,20 +114,17 @@ header nav ul li a:hover {
 
 }
 .p-card {
-    background-color: var(--primary-color);
-    border: 4px solid var(--accessory-color-2);
-    color: var(--tertiary-color);
+    background-color: var(--accessory-color-1);
+    border: 4px solid var(--tertiary-color);
+    color: var(--secondary-color);
     margin: 30px;
     padding: 8px;
+    border-radius: 8px;
     
 }
 /* Contact */
-.contact-info {
-    border: 4px solid var(--accessory-color-2);
-    margin: 30px;
-    width: 30%;
-    font-size: 18px;
-    flex-wrap: wrap;
+.contact-box {
+    background: var(--accessory-color-1);
 }
 .social-media {
     display: flex;
@@ -122,38 +134,62 @@ header nav ul li a:hover {
     padding: 50px;
     color: var(--tertiary-color);
     font-size: 18px;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
 }
 .social-media-btn {
-    justify-content: center;
+    height: 150px;
+    width: 150px;
+    padding: 25px;
 }
 .social-media-btn h3 {
     text-align: center;
-    padding: 25px;
+    margin-top: 15px;
 }
-.social-media-logo img {
-    width: 250px;
-    height: auto;
+.social-media-logo {
+    width: 100px;
+    height: 100px;
     justify-content: center;
 }
 .music h3 {
-    text-align: center;
+    text-align: left;
     font-size: 35px;
-    color: #0c7c59;
+    color: var(--secondary-color);
     padding: 20px;
     width: 50%;
 }
 .music iframe{
-    width: 50%;
-    height: 337px;
-    border: 10px solid var(--primary-color);
-    margin-left: 15px;
+    width: auto;
+    height: 255px;
+    margin: 0 25px;
+    float: left;
+    border: 5px solid var(--secondary-color);
+    border-radius: 15px;
 }
+.my-info {
+    background-color: var(--tertiary-color);
+    height: 400px;
+    width: 400px;
+    margin-left: 686px;
+}
+.my-info h3 {
+    text-align: center;
+}
+
 /* Footer */
 
 footer {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    width: 100%;
-    background-color: var(--accessory-color-1);
+   background: var(--primary-color);
+   padding: 40px 35px;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   width: 100%;
+}
+footer h2 {
+    color: var(--accessory-color-1);
+    font-size: 30px;
+    margin: 0;
+}
+footer p {
+    color: var(--accessory-color-1);
 }
