--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,16 +19,16 @@ img {
     display: flex ;
 }
 section {
-    padding: 60px;
+    padding: 30px;
 }
 
 /* .float-right {
     float: right;
-}
+} */
 
 .float-left {
     float: left;
-} */
+}
 
 /* body */
 body {
@@ -88,24 +88,26 @@ header nav ul li a:hover {
 }
 
 /* About-Me */
-.bio {
-    margin: 10px 25px;
-    padding: 10px 5px;
-    width: fit-content;
-    background-color: var(--accessory-color-1);
-    border: 4px solid var(--tertiary-color);
-    color: var(--secondary-color);
-    border-radius: 8px;
+.about-me-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
-
+.bio {
+    width: 50%;
+    padding: 20px;
+}
 .bio h3 {
-    font-size: 32px;
-    font-weight: bold;
     text-align: center;
+    font-size: 24px;
+    padding: 20px;
 }
 .bio p {
-    padding: 5px;
-    text-align: center;
+    text-align: right;
+}
+.ME {
+    width: 50%;
 }
 
 /* Projects */
@@ -125,17 +127,33 @@ header nav ul li a:hover {
 /* Contact */
 .contact-box {
     background: var(--accessory-color-1);
+    display: flex;
+    flex-wrap: wrap;
+}
+.contact-box h2 {
+    text-align: center;
+}
+.my-info {
+    width: 300px;
+}
+.my-info h3 {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.my-info p address {
+    text-align: left;
 }
 .social-media {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 10px 50px;
-    padding: 50px;
     color: var(--tertiary-color);
     font-size: 18px;
     flex-direction: row-reverse;
-    justify-content: flex-start;
+    max-width: 450px;
+    max-height: 150px;
 }
 .social-media-btn {
     height: 150px;
@@ -165,15 +183,6 @@ header nav ul li a:hover {
     float: left;
     border: 5px solid var(--secondary-color);
     border-radius: 15px;
-}
-.my-info {
-    background-color: var(--tertiary-color);
-    height: 400px;
-    width: 400px;
-    margin-left: 686px;
-}
-.my-info h3 {
-    text-align: center;
 }
 
 /* Footer */
