--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding: 0;
 }
+html {
+    scroll-behavior: smooth;
+}
 :root {
     --primary-color: #0c7c59;
     --secondary-color:#573d1c;
@@ -20,14 +23,6 @@ img {
 }
 section {
     padding: 30px;
-}
-
-/* .float-right {
-    float: right;
-} */
-
-.float-left {
-    float: left;
 }
 
 /* body */
@@ -97,6 +92,9 @@ header nav ul li a:hover {
 .bio {
     width: 50%;
     padding: 20px;
+    border: 14px solid var(--primary-color);
+    border-radius: 50px;
+    box-shadow: 10px 10px 5px var(--secondary-color);
 }
 .bio h3 {
     text-align: center;
@@ -107,20 +105,27 @@ header nav ul li a:hover {
     text-align: right;
 }
 .ME {
-    width: 50%;
+    width: 20%;
 }
 
 /* Projects */
+#Projects {
+    background-color: var(--secondary-color);
+}
+
+#Projects h2 {
+    border-bottom: 3px solid var(--primary-color);
+    color: var(--accessory-color-1);
+}
 .container {
     display: flex;
-
 }
 .p-card {
     background-color: var(--accessory-color-1);
     border: 4px solid var(--tertiary-color);
     color: var(--secondary-color);
     margin: 30px;
-    padding: 8px;
+    padding: 70px;
     border-radius: 8px;
     
 }
@@ -129,6 +134,8 @@ header nav ul li a:hover {
     background: var(--accessory-color-1);
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 .contact-box h2 {
     text-align: center;
@@ -170,11 +177,12 @@ header nav ul li a:hover {
     justify-content: center;
 }
 .music h3 {
-    text-align: left;
-    font-size: 35px;
+    text-align: center;
+    font-size: 24px;
     color: var(--secondary-color);
-    padding: 20px;
     width: 50%;
+    margin: auto;
+    padding-bottom: 10px;
 }
 .music iframe{
     width: auto;
